# dendai_ict

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt  samlple.csv  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ossar-analysis.yml
src/: Main.py  sample.csv  sample.py  setup.py
src/controller/: AppController.py  SerialController.py
src/controller/Graph/: BaseGraph.py  FftGraph.py  HeartBeatGraph.py  RatioGraph.py  RawGraph.py
src/model/: Model.py
src/notebook/: sample.ipynb  sample2.ipynb  sample3.ipynb
src/util/: Global.py  GraphUtil.py  SetInterval.py  SignalUtil.py
src/util/fft/: MyFFT.py  Test_FFT.py
src/view/: AppView.py  Style.py
